@@ -1,5 +1,8 @@
 2005-11-11  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/widgets/checkbutton.py (CheckButton.prop_set_data_type): 
+	Accept string here.
+
 	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation): Refactor
 	emitting of validation-changed since we also need to emit it when
 	calling set_[valid|invalid|blank] and not only in validate_data.
